# AIDA-X

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: build.yml
files/: US-Double-Nrm-Model.json  deerinkstudios-tw40-ac-clean.json  tw40_california_clean_deerinkstudios.json
src/: 3rd-party.cpp  DistrhoPluginCommon.hpp  DistrhoPluginInfo.h  ExpSmoother.hpp  LinearSmoother.hpp  Semaphore.hpp  TwoStageThreadedConvolver.hpp  Widgets.hpp  aidadsp-plugin.cpp  aidadsp-ui.cpp  model-activate.cpp  model_variant.hpp
src/jucewrapper/: CMakeLists.txt  JuceWrapper.cpp
src/plugin/: DistrhoPluginInfo.h
src/standalone/: 3rd-party.cpp  AudioFFT.cpp  Biquad.cpp  Blendish.cpp  DistrhoPluginInfo.h  FFTConvolver.cpp  Files.cpp  Graphics.cpp  Makefile  TwoStageFFTConvolver.cpp  Utilities.cpp  aidadsp-plugin.cpp  aidadsp-ui.cpp  ax.rc  model-activate.cpp  pffft.cpp  r8bbase.cpp
utils/: Info.plist  ax-mod.html  ax.html  ax.icns  ax.rc  macos-installer-welcome.txt  windows-installer-welcome.rtf  windows-installer.sh
utils/freedesktop/: cc.aidadsp.AIDA_X.appdata.xml  cc.aidadsp.AIDA_X.desktop
utils/inno/: win64.iss
